@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-30T00:57:07Z",
-  "count_outdated" : 568,
-  "uniques_outdated" : 394,
+  "timestamp" : "2025-08-31T01:04:13Z",
+  "count_outdated" : 569,
+  "uniques_outdated" : 395,
   "count" : 571,
   "uniques" : 397,
   "clones" : [
-    {
-      "timestamp": "2025-08-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-22T00:00:00Z",
       "count": 1,
