@@ -1,12 +1,7 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-08-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-22T00:00:00Z",
       "count": 1,
